FWF-6276[bugfix] - Scroll-responsive header collapse for form builder

--- a/forms-flow-theme/scss/v8-scss/_theme.scss
+++ b/forms-flow-theme/scss/v8-scss/_theme.scss
@@ -324,7 +324,7 @@ $font-tokens: (
           }
 
           &.formedit-layout {
-            max-height: calc(100vh - 270px);
+            max-height: calc(100vh - 275px) !important;
             &.variables-tab{
               max-height: calc(100vh - 355px) !important;
             }
@@ -408,6 +408,22 @@ $font-tokens: (
   .body-section{
     max-height: 90vh !important;
   }
+}
+
+.formedit-page {
+  overflow-x: hidden;
+
+  .body-section.formedit-layout,
+  .formedit-builder-flow {
+    overflow: visible !important;
+  }
+}
+
+.formedit-header-primary {
+  position: sticky;
+  top: 0;
+  z-index: 15;
+  background: var(--ff-white) !important;
 }
 
 // Default custom-scroll class using the mixin
